# QuicLink

./: .gitignore  CMakeLists.txt  LICENSE  README.md  go.work
src/client/: CMakeLists.txt  main.cpp
src/client/network/: SignalingClient.cpp  SignalingClient.h
src/client/utils/: JsonProtocol.h
src/server/: config.example.json  main.go
src/server/config/: config.go
src/server/handlers/: upload.go  websocket.go
src/server/models/: message.go  room.go
src/server/store/: room_manager.go
src/web/: .env  .env.example  package-lock.json  package.json
src/web/src/: App.vue
src/web/src/router/: index.ts
src/web/src/stores/: connection.ts
src/web/src/views/: HomeView.vue
